# ssu-mgmt

./: .gitignore  Makefile  docker-compose.yml
.github/workflows/: tagged-releases.yml
backend/: Cargo.toml  Dockerfile  diesel.toml  recipe.json
backend/.cargo/: config.toml
backend/chart/: Chart.yaml  values.yaml
backend/chart/templates/: _helpers.tpl  _val.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
backend/migrations/2024-07-09-185637_init/: down.sql  up.sql
backend/migrations/2026-06-21-000000_rework_schema/: down.sql  up.sql
backend/migrations/2026-06-26-000000_ssumgmt_audit_source/: down.sql  up.sql
backend/migrations/2026-06-27-000000_kpi_failure_index/: down.sql  up.sql
backend/migrations/2026-06-27-000001_actor_last_ts/: down.sql  up.sql
backend/migrations/2026-06-27-000002_timeline_hourly_rollup/: down.sql  up.sql
backend/migrations/2026-06-27-000003_entity_inspect_perf/: down.sql  up.sql
backend/migrations/2026-06-28-000000_identity_context_cache/: down.sql  up.sql
backend/migrations/2026-06-29-000000_backfill_identity_null_index/: down.sql  metadata.toml  up.sql
backend/migrations/2026-06-29-000001_timeline_incremental/: down.sql  up.sql
backend/migrations/2026-06-29-000002_kind_filter_time_actor_index/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/api/: auth.rs  misc.rs  mod.rs  static_files.rs
backend/src/api/controllers/: actors.rs  alerts.rs  audit.rs  auth_config.rs  entity.rs  graph.rs  meta.rs  mod.rs  overview.rs  progress.rs  query.rs  query_ast.rs
backend/src/db/: mod.rs  model.rs  views.rs
backend/src/messaging/: config.rs  consumer.rs  mod.rs  model.rs  offset_tracker.rs  registry.rs
backend/src/messaging/handlers/: mod.rs  user_action.rs
backend/src/misc/: config.rs  context.rs  error.rs  health.rs  metrics.rs  mod.rs  runtime.rs  services.rs
backend/src/service/: leader.rs  mod.rs  progress_relay.rs  retention.rs  timeline.rs
backend/src/service/bg/: mod.rs
backend/src/service/ingest/: cloudtrail.rs  github.rs  github_s3.rs  mod.rs
backend/src/service/siem/: actors.rs  alerts.rs  anomalies.rs  geoip.rs  grants.rs  guardduty.rs  mod.rs  risk.rs  sessions.rs  travel.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  router.ts  style.css
frontend/src/audit/: kql.ts
frontend/src/auth/: client.ts  useAuth.ts  usePhoto.ts
frontend/src/components/: CacheBadge.vue  ConsoleTable.vue  HexMark.vue  PageSection.vue  ThemeToggle.vue  TopBar.vue
frontend/src/composables/: useColumnOrder.ts  useColumnSizing.ts  useColumnVisibility.ts  useCustomColumns.ts  useIsMobile.ts  useTheme.ts
frontend/src/ssumgmt/: AlertDetailModal.vue  AnomalyDetailModal.vue  ComingSoonView.vue  SsuMgmtLayout.vue  actorColumns.ts  api.ts  feedColumns.ts  format.ts  queryColumns.ts  tableColumns.ts  useAlertsFeed.ts  useAnomaliesFeed.ts  useConsoleStream.ts
frontend/src/views/: ActorsView.vue  AlertsView.vue  AuditLogsView.vue  EntityView.vue  GraphView.vue  LandingView.vue  OverviewView.vue  QueryView.vue
