[package]
name = "ssu_mgmt"
version = "0.1.0"
edition = "2021"

[dependencies]
seqtf_bootstrap = {registry = "seqtf", version = "0.1.7"}
config = { version = "^0.13", features = ["yaml"] }
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1"
serde_yaml = "^0.9"
log = "^0.4"
anyhow = { version = "^1", features = ["backtrace"]}
thiserror = "^1"
tokio = { version = "^1.28", features = ["full"] }
tokio-util = "^0.7"
futures = "^0.3"
reqwest = { version = "^0.12", features = ["json"] }
chrono = "0.4.24"
crossbeam = "0.8.2"
flume = "0.11.0"
dashmap = { version = "6.0.1", features = ["serde"] }
base64 = "0.22.1"

axum = {version = "^0.7", features = ["macros"]}
axum-extra = { version = "^0.9", features = ["cookie"] }
tower-layer = "0.3.2"
jwt-authorizer = "^0.14"
rust-embed ="^8.4.0"
mime_guess = "^2.0"
regex = "1.10.4"

rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }

diesel_migrations = "^2.2"
diesel = { version = "^2.2", features = ["postgres", "chrono", "serde_json"]}

[build-dependencies]
vergen = { version = "8.1.3", features = ["build", "git", "gitcl"] }