[package]
name = "ssu_mgmt"
version = "0.1.0"
edition = "2021"

[dependencies]
seqtf_bootstrap = {registry = "seqtf", version = "0.1.12"}
config = { version = "^0.13", features = ["yaml"] }
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1"
serde_yaml = "^0.9"
log = "^0.4"
tracing = "^0.1"
anyhow = { version = "^1", features = ["backtrace"]}
thiserror = "^1"
tokio = { version = "^1.28", features = ["full"] }
tokio-util = "^0.7"
futures = "^0.3"
reqwest = { version = "^0.12", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
crossbeam = "0.8.2"
uuid = { version = "^1", features = ["v4"] }
flume = "0.11.0"
dashmap = { version = "6.0.1", features = ["serde"] }
base64 = "0.22.1"

axum = {version = "^0.7", features = ["macros", "ws"]}
axum-extra = { version = "^0.9", features = ["cookie", "query"] }
tower-layer = "0.3.2"
tower-http = { version = "^0.5", features = ["trace"] }
pprof = { version = "^0.13", features = ["flamegraph", "protobuf-codec"] }
jwt-authorizer = "^0.14"
rust-embed ="^8.4.0"
mime_guess = "^2.0"
regex = "1.10.4"
csv = "^1.3"

rdkafka = { version = "0.39.0", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }

aws-config = { version = "^1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "^1"
flate2 = "^1"

aws-sdk-guardduty = "^1"
maxminddb = "^0.24"

diesel_migrations = "^2.2"
diesel = { version = "^2.2", features = ["postgres", "chrono", "serde_json", "r2d2"]}
r2d2 = "^0.8"

postgres = "^0.19"
# TLS for the progress-relay `postgres`-crate connection. The rest of the app uses
# Diesel/libpq (sslmode=prefer → auto-negotiates TLS); the relay must match it or it
# fails against a TLS-enforcing deployed Postgres while working locally on plaintext.
postgres-native-tls = "^0.5"
native-tls = "^0.2"

# jemalloc as the global allocator. glibc malloc creates up to 8×CPU-count arenas that
# fragment and are essentially never returned to the OS — on a many-core prod node the
# RSS climbs until the OOM-killer fires. jemalloc returns freed memory to the OS (decay)
# and is faster under multithreaded allocation. Linux-only; the runtime image is Debian.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
# `profiling` builds jemalloc with `--enable-prof` so the sampling heap profiler is
# available (allocation call-stack attribution via the `/debug/heap` dump endpoint +
# `jeprof`). It's ~zero overhead until activated at runtime with
# `_RJEM_MALLOC_CONF=...,prof:true,prof_active:true`; off by default.
tikv-jemallocator = { version = "^0.6", features = ["profiling"] }
# Read-side companion to the allocator: exposes jemalloc's own counters
# (allocated / active / resident / retained / mapped) for the /debug/mem endpoint,
# so we can tell a real app-side leak (allocated climbing) from allocator retention
# (resident/retained climbing while allocated is flat). `stats` enables the counters;
# the `epoch` mib must be advanced before each read to refresh them.
tikv-jemalloc-ctl = { version = "^0.6", features = ["stats"] }

[build-dependencies]
vergen = { version = "8.1.3", features = ["build", "git", "gitcl"] }